[package]
name = "btcturk-rust"
version = "0.1.0"
edition = "2021"
author = "Alper Buluc"

[dependencies]
hmac = "0.12.1"
chrono = "0.4.19"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1", features = ["macros"] }
